# sandcat

./: Cargo.toml  LICENSE  README.md  compose-all.yml  install.sh  settings.example.json
.devcontainer/: Dockerfile  Dockerfile.rust  Dockerfile.test  README.md  compose.yml  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install-ca-cert.sh
.github/workflows/: test.yml
scripts/: app-init.sh  app-post-start.sh  app-user-init.sh  mitmproxy_addon.py  post-create.sh  post-start.sh  sandcat-init.sh  sandcat_addon.py  test_mitmproxy_addon.py  test_sandcat_addon.py
src/: main.rs
