[package]
name = "sandcat"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use rustls-tls-native-roots so reqwest reads the system CA store at runtime,
# allowing mitmproxy's CA cert to be trusted via the dev container's trust store.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
